# Provided fallback solution for site title to ensure high contrast is maintained when background images are disabled.
git-svn-id: https://svn.ircan.gc.ca/svn/wet-boew-gcwu-fegc@104 ef584cfa-36a7-404c-b6be-e8b063e69e19

--- a/branches/v1.0/theme-gcwu-fegc/fip-pcim/css/fip-pcim-ie7.css
+++ b/branches/v1.0/theme-gcwu-fegc/fip-pcim/css/fip-pcim-ie7.css
@@ -12,7 +12,7 @@
 
 /** Screen-only CSS **/
 @media screen {
-	#cn-body-inner-1col, #cn-body-inner-2col, #cn-body-inner-2col-right, #cn-body-inner-3col{background-position:center 3.1em;}
+	#cn-body-inner-1col, #cn-body-inner-2col, #cn-body-inner-2col-right, #cn-body-inner-3col, #cn-head-inner{background-position:center 3.1em;}
 	
 	#cn-banner {float:left;}
 	#cn-search-submit {padding:1px 0;}
